--- a/app/src/main/res/layout/food_order_item.xml
+++ b/app/src/main/res/layout/food_order_item.xml
@@ -12,8 +12,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
                 android:id="@+id/dish_name"
+                android:textStyle="italic"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:gravity="center"
                 android:layout_marginLeft="5dp"
                 android:layout_gravity="center"
@@ -27,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
+        android:layout_marginRight="5dp"
         android:layout_gravity="center"
         android:orientation="horizontal"
 
@@ -34,26 +36,27 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right"
+            android:gravity="center"
             android:id="@+id/dish_price"
             android:textStyle="bold"
             android:textSize="18sp"
             android:layout_gravity="center_vertical"
             android:text="3.5€"
-            android:paddingRight="5dp" />
+            android:layout_marginRight="10dp"/>
 
         <ImageButton
             android:id="@+id/minus"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@android:drawable/ic_media_play"
-            android:backgroundTint="@color/themeColorLighter"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_remove_circle_white_24dp"
+            android:backgroundTint="@color/tabIndicator"
             android:rotation="180" />
 
         <TextView
             android:id="@+id/dish_quantity"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:gravity="center"
             android:text="0"
             android:textAppearance="?android:attr/textAppearanceMedium"
@@ -61,10 +64,11 @@
 
         <ImageButton
             android:id="@+id/plus"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@android:drawable/ic_media_play"
-            android:backgroundTint="@color/themeColorLighter"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_add_circle_white_24dp"
+            android:backgroundTint="@color/tabIndicator"
             />
 
     </LinearLayout>
