--- a/app/src/main/res/layout/time_fragment.xml
+++ b/app/src/main/res/layout/time_fragment.xml
@@ -42,6 +42,17 @@
             />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/closed"
+        android:gravity="center"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/holo_red_dark"
+        android:text="@string/closed_restaurant"
+        />
+
     <it.polito.mad_lab3.common.ExpandableHeightGridView
         android:focusable="true"
         android:id="@+id/gridView"
@@ -55,7 +66,6 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="20dp" />
 
-    <requestFocus />
 
 
     <!--
