--- a/app/src/main/res/layout/activity_checkout_order.xml
+++ b/app/src/main/res/layout/activity_checkout_order.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
-        <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentTop="true"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".reservation.CheckoutOrder">
 
+    <include android:id="@+id/tb" layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_alignParentTop="true"/>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/summary_view"
+    >
         <android.support.v7.widget.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -103,7 +107,7 @@
 
 
         </android.support.v7.widget.CardView>
-    </LinearLayout>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/confirm_order"
@@ -118,3 +122,4 @@
         android:layout_marginBottom="5dp" />
 
 </RelativeLayout>
+</LinearLayout>
