--- a/app/src/main/res/layout/restaurant_userphoto_fragment.xml
+++ b/app/src/main/res/layout/restaurant_userphoto_fragment.xml
@@ -10,6 +10,8 @@
         android:id="@+id/availablePhotosTV"
         android:padding="8dp"
         android:textSize="18sp"
+        android:text="Photo (13)"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <HorizontalScrollView
