--- a/app/src/main/res/layout/activity_choose_photo.xml
+++ b/app/src/main/res/layout/activity_choose_photo.xml
@@ -6,17 +6,24 @@
     tools:context="it.polito.mad_lab3.restaurant.ChoosePhotoActivity">
 
     <include android:id="@+id/includedtoolbar" layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
-
+    <ScrollView
+        android:layout_below="@id/includedtoolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/includedtoolbar"
+
         android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
-        <RelativeLayout
+
+         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -42,6 +49,7 @@
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             card_view:cardUseCompatPadding="true"
             card_view:cardCornerRadius="4dp"
+            android:layout_marginTop="16dp"
             android:minHeight="64dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -64,24 +72,17 @@
 
 
     </LinearLayout>
-    <android.support.v7.widget.CardView
-
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardCornerRadius="4dp"
-        android:padding="16dp"
-        android:minHeight="64dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/view">
-    <Button
+        </RelativeLayout>
+    </ScrollView>
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/sendButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:text="SEND IMAGE"
-         />
-    </android.support.v7.widget.CardView>
-
+        android:src="@android:drawable/ic_menu_send"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp" />
 </RelativeLayout>
