--- a/app/src/main/res/layout/activity_menu_photo_view.xml
+++ b/app/src/main/res/layout/activity_menu_photo_view.xml
@@ -22,29 +22,30 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/colorAccent"
         android:background="#55000000"
         android:layout_gravity="bottom">
-        <TextView
-            android:id="@+id/dishNameText"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="40dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:textColor="@android:color/white" />
-        <RatingBar
-            android:layout_below="@id/galleryPhotoText"
-            android:id="@+id/ratingBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:theme="@style/RatingBar"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="40dp"
-            style="?android:attr/ratingBarStyleSmall"/>
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/dishNameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white" />
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:theme="@style/RatingBar"
+
+                style="?android:attr/ratingBarStyleSmall"/>
+        </LinearLayout>
         <TextView
             android:layout_centerVertical="true"
             android:id="@+id/priceTV"
@@ -53,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"/>
+
     </RelativeLayout>
     <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
 </FrameLayout>
