--- a/app/src/main/res/layout/menu_prev_fragment_layout.xml
+++ b/app/src/main/res/layout/menu_prev_fragment_layout.xml
@@ -5,12 +5,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:padding="8dp"
-        android:textSize="18sp"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Menu"/>
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/ic_restaurant_menu_black_48dp"/>
+        <TextView
+            android:padding="8dp"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Menu"/>
+    </LinearLayout>
     <android.support.design.widget.TabLayout
         android:id="@+id/menuPrevTabs"
         app:tabMode="scrollable"
