--- a/app/src/main/res/layout/restaurant_userphoto_fragment.xml
+++ b/app/src/main/res/layout/restaurant_userphoto_fragment.xml
@@ -6,14 +6,22 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/availablePhotosTV"
-        android:padding="8dp"
-        android:textSize="18sp"
-        android:text="Photo (13)"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/ic_photo_library_black_48dp"/>
+        <TextView
+            android:id="@+id/availablePhotosTV"
+            android:padding="8dp"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
     <HorizontalScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
