--- a/app/src/main/res/layout-land/activity_show_offer.xml
+++ b/app/src/main/res/layout-land/activity_show_offer.xml
@@ -6,24 +6,23 @@
     tools:context="it.polito.mad_lab3.restaurant.ShowOfferActivity">
 
     <include android:id="@+id/includedtoolbar" layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_below="@id/includedtoolbar"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:scrollbars="none">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_below="@id/includedtoolbar"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_horizontal_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:orientation="horizontal">
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center"
                 android:background="@android:drawable/dialog_holo_light_frame"
-                android:layout_marginBottom="16dp">
+                android:layout_marginRight="8dp">
                 <fragment
                     xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab3"
                     android:id="@+id/photoViewer"
@@ -37,18 +36,17 @@
                     custom:widthInDP="200"
                     custom:initialBackground="@drawable/special_offer" />
 
-
-
             </RelativeLayout>
-
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none">
             <android.support.v7.widget.CardView
-
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 card_view:cardUseCompatPadding="true"
                 card_view:cardCornerRadius="4dp"
-                android:minHeight="64dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -221,8 +219,7 @@
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
-
+            </ScrollView>
 
         </LinearLayout>
-    </ScrollView>
 </RelativeLayout>
