--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -207,7 +207,13 @@
                     android:minHeight="64dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <LinearLayout
+                    <fragment
+                        android:id="@+id/offersPrevFragment"
+                        android:name="it.polito.mad_lab3.restaurant.offer_prev.OfferPrevFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+                    <!--<LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
@@ -236,10 +242,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
-                                <!-- offers inserted programmatically in this point -->
+
                             </LinearLayout>
                         </HorizontalScrollView>
-                    </LinearLayout>
+                    </LinearLayout>-->
 
                 </android.support.v7.widget.CardView>
             </LinearLayout>
