--- a/app/src/main/res/layout/activity_show_offer.xml
+++ b/app/src/main/res/layout/activity_show_offer.xml
@@ -221,7 +221,9 @@
                     </LinearLayout>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
-
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="16dp"></RelativeLayout>
 
         </LinearLayout>
     </ScrollView>
