--- a/app/src/main/res/layout/menu_prev_fragment_layout.xml
+++ b/app/src/main/res/layout/menu_prev_fragment_layout.xml
@@ -39,6 +39,7 @@
         />
     <android.support.v4.view.ViewPager
         android:id="@+id/menuPrevPager"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="172dp"/>
     <Button
