--- a/app/src/main/res/layout/riga_lista_ricerche.xml
+++ b/app/src/main/res/layout/riga_lista_ricerche.xml
@@ -43,8 +43,17 @@
                     android:fontFamily="sans-serif-condensed"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10sp"
-                    android:id="@+id/desc_ricerca"
-                    android:text="'Descrizione del locale'"/>
+                    android:id="@+id/desc_ricerca"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/place_ricerca"
+                    android:textSize="12sp"
+                    android:text="corso Stati Uniti 17"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="15sp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -53,8 +62,7 @@
                     android:textSize="12sp"
                     android:text="5-10 euro"
                     android:textColor="@color/black"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="15sp"/>
+                    android:layout_gravity="center_horizontal"/>
 
                 <RatingBar
                     android:layout_width="wrap_content"
