implementazione ricerca avanzata

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,25 +58,16 @@
                 android:gravity="center"
                 android:layout_marginBottom="1sp"/>
 
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="40sp"
-                android:layout_marginTop="1sp"
-                android:orientation="vertical"
-                android:stretchColumns="1"
-                >
-                <TableRow>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tasto_ricerca_ristorante"
+                android:layout_gravity="right"
+                android:text="@string/search"
+                android:onClick="searchRestaurant"
+                android:background="#00FA9A">
+            </Button>
 
-                    <Button
-                        android:id="@+id/tasto_ricerca_ristorante"
-                        android:layout_column="4"
-                        android:text="find"
-                        android:onClick="searchRestaurant"
-                        android:background="#00FA9A">
-                    </Button>
-
-                </TableRow>
-            </TableLayout>
         </LinearLayout>
 
         <View
