--- a/app/src/main/res/layout/riga_lista_ricerche.xml
+++ b/app/src/main/res/layout/riga_lista_ricerche.xml
@@ -32,8 +32,8 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/titoli"
                     android:fontFamily="sans-serif"
-                    android:text="Questa è una prova"
-                    android:layout_column="1"/>
+                    android:gravity="center_horizontal"
+                    android:text="@string/titoloLocaleDefault"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -50,7 +50,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/place_ricerca"
                     android:textSize="12sp"
-                    android:text="corso Stati Uniti 17"
                     android:textColor="@color/black"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="15sp"/>
@@ -60,7 +59,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/cost_ricerca"
                     android:textSize="12sp"
-                    android:text="5-10 euro"
                     android:textColor="@color/black"
                     android:layout_gravity="center_horizontal"/>
 
@@ -71,7 +69,7 @@
                     style="?android:attr/ratingBarStyleSmall"
                     android:layout_gravity="center_horizontal"
                     android:id="@+id/rating_ricerca"
-                    android:rating="3.5"/>
+                    android:rating="0"/>
             </LinearLayout>
 
             <ImageView
