--- a/app/src/main/res/menu/filter_button_toolbar.xml
+++ b/app/src/main/res/menu/filter_button_toolbar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_find"
-        android:title="@string/find"
+        android:title="@string/search"
         app:showAsAction="always"
         android:icon="@drawable/ic_filter_white" />
 </menu>
